--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Database
-MONGO_URL=mongodb+srv://suleymanaslan8006:u7oQGYW4xp1GOABT@cluster0.yrwc0nk.mongodb.net/
+MONGO_URL = mongodb+srv://suleymanaslan8006:u7oQGYW4xp1GOABT@cluster0.yrwc0nk.mongodb.net/ReactNative
 PORT=8080
 DEV_MODE=development
 
